# libsimulo

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md  main.cc  simulo.cc
include/simulo/: simulo.h  simulo__post.h  simulo__pre.h
src/: lib.rs  pose.rs
